apps/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  namespace: calibre-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: calibre.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: calibre-web
            port:
              name: http
  tls:
    - hosts:
        - calibre.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
